style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
/*----------------Main Colors ------------*/

:root {
    --color-primary: blue;
    --color-secondary: gray;
    --color-info-light: #dce1eb;
    --color-dark: #363949;
    --color-light: rgba(132, 139, 200, 0.18);
}

* {
    border: 1px solid red;
    margin: 0;
    padding: 0;
    outline: 0;
    appearance: none;
    border: 0;
    text-decoration: none;
    list-style: none;
    box-sizing: border-box;
    font-weight: bold;
}

html{
    font-size: 14px;
    background-color: yellow;
}

body{
    width: 100vw;
    height: 100vh;
    font-family: poppins, sans-serif;
    font-size: 0.88rem;
    background: var(--color-background);
    user-select: none;
    overflow-x: hidden;
    color: var(--color-dark);
}

body .upper-bar{
    border-width: 8;
    border: 4px black; 
    border-style: solid;
    background: var(--color-secondary); 
    box-sizing: border-box;
    overflow: auto;
    padding: 18px 10px;
    position: relative;
    top: 0;
    width: 100%;
    z-index: 999;
    word-spacing: 9px;

}
.pages{
    font-size: 1.2rem;

}

body .upper-bar a{
    margin-left: 30px;
    font-family: poppins, sans-serif;
    color: black;
    word-spacing: normal;
}

body .upper-bar a:hover{
    color: var(--color-primary);
}
.sort {
    margin-left: 30px;
}

body main table tr td img{
    display: grid;
    gap: 1.6rem;
    margin-top: 30px;
    margin-right: 75px;
    margin-left: 30px;
    height: 320px;
    width: 360px;
    
}

main table tr td p{
    display: flex;
}
main table{
    display: flex;
    padding: 30px;
}

main table tr #gallery{
    align-content: center;
    margin-right: 100px;
    background-color: black;
    border-width: 4px;
    border-color: lightgray;
    border-style: outset;
    padding: 7.5px;
    border-radius: 25%;
    text-align: center;
}

main table tr #gallery p{
    justify-content: center;
}

footer{
    margin-top: 400px;
}

